2002-08-14  Koji Arai  <jca02266@nifty.ne.jp>

	* src/header.c: in spite of extended type value, read contents of
	any ext headers.

	* src/header.c: comment fixed.

2002-08-12  Koji Arai  <jca02266@nifty.ne.jp>

	* src/header.c (dump_skip_bytes): do nothing when length is 0.

2002-08-11  Koji Arai  <jca02266@nifty.ne.jp>

	* src/lha_macro.h (SJC_FIRST_P): rename to SJIS_FIRST_P.
	(SJC_SECOND_P): rename to SJIS_SECOND_P.

	* src/util.c (convdelim): removed.

	* src/header.c (convert_filename): when small letter is included
	in filename, do not convert case.

	* tests/lha-test.in, tests/lha-test2, tests/lha-test3, tests/lha-test4, tests/lha-test5, tests/lha-test6, tests/lha-test7, tests/lha-test8, tests/lha-test9, tests/lha-test10, tests/lha-test11, tests/lha-test12, tests/lha-test13:
	print filename when test failed.

	* tests/lha-test.in, tests/lha-test12, tests/lha-test13:
	added tests converting text files.

	* src/header.c (get_extended_header): recognize the Windows time
	stamp header (0x41), but ignored.

	* src/header.c (write_unix_info): added.

2002-08-11  Koji Arai  <jca02266@nifty.ne.jp>

	* released.

	* configure.ac: updated version.

	* 00readme.autoconf: modified.

	* src/header.c: DUMP_HEADER is always true.
	dump header when running `lha vvv foo.lzh'.
	(get_header): added new extend type JAVA.

	* src/lha_macro.h (EXTEND_JAVA): added new extend type JAVA.

	* src/lhlist.c (list_one): ditto.

	* src/lharc.c (init_variable): `verbose' is changed to successive.
	(main): ditto.

2002-08-10  Koji Arai  <jca02266@nifty.ne.jp>

	* src/lhlist.c (list_one): fixed mode checks.

	* src/prototypes.h: updated.

	* src/header.c (get_header_level2): check CRC value for reading
	level 2 and 3 header.
	(get_header_level3): ditto.
	(get_extended_header): ditto.
	(get_header_level0): set total header size to
	`LzHeader.header_size' even if level 0 or 1 header is read.
	(get_header_level1): ditto.
	
	* src/append.c (encode_lzhuf): encode(), decode() and copyfile()